@@ -96,17 +96,13 @@ if "%JAVACMD%"=="" set JAVACMD=java
 
 if "%REPO%"=="" set REPO=%VLT_HOME%\lib
 
-set EXTRA_JVM_ARGUMENTS=-Xms500m -Xmx500m
-for /f tokens^=2-5^ delims^=.-_^" %%j in ('%JAVACMD% -fullversion 2^>^&1') do set "jver=%%j%%k%%l%%m"
-if %jver% LSS 18000 set EXTRA_JVM_ARGUMENTS=-Xms500m -Xmx500m -XX:PermSize=128m -XX:-UseGCOverheadLimit
-
-set CLASSPATH="%REPO%"\org.apache.jackrabbit.vault-3.2.6.jar;"%REPO%"\vault-vlt-3.2.6.jar;"%REPO%"\jackrabbit-jcr-commons-2.16.3.jar;"%REPO%"\vault-diff-3.2.6.jar;"%REPO%"\diffutils-1.2.1.jar;"%REPO%"\commons-io-2.5.jar;"%REPO%"\vault-sync-3.2.6.jar;"%REPO%"\commons-jci-fam-1.0.jar;"%REPO%"\commons-logging-api-1.1.jar;"%REPO%"\org.apache.sling.jcr.api-2.0.6.jar;"%REPO%"\org.apache.sling.commons.osgi-2.0.6.jar;"%REPO%"\vault-davex-3.2.6.jar;"%REPO%"\jackrabbit-jcr-client-2.16.3.jar;"%REPO%"\jackrabbit-spi-commons-2.16.3.jar;"%REPO%"\jackrabbit-spi-2.16.3.jar;"%REPO%"\commons-collections-3.2.2.jar;"%REPO%"\jackrabbit-jcr2spi-2.16.3.jar;"%REPO%"\jackrabbit-api-2.16.3.jar;"%REPO%"\annotations-16.0.2.jar;"%REPO%"\jackrabbit-spi2dav-2.16.3.jar;"%REPO%"\httpmime-4.5.3.jar;"%REPO%"\jackrabbit-webdav-2.16.3.jar;"%REPO%"\httpclient-4.5.3.jar;"%REPO%"\httpcore-4.4.6.jar;"%REPO%"\commons-logging-1.0.3.jar;"%REPO%"\commons-codec-1.10.jar;"%REPO%"\jcl-over-slf4j-1.7.25.jar;"%REPO%"\commons-cli-2.0-mahout.jar;"%REPO%"\jline-0.9.94.jar;"%REPO%"\jcr-2.0.jar;"%REPO%"\slf4j-api-1.7.6.jar;"%REPO%"\slf4j-log4j12-1.7.6.jar;"%REPO%"\log4j-1.2.12.jar;"%REPO%"\vault-cli-3.2.6.jar
+set CLASSPATH="%REPO%"\org.apache.jackrabbit.vault-3.4.1-SNAPSHOT.jar;"%REPO%"\vault-vlt-3.4.1-SNAPSHOT.jar;"%REPO%"\jackrabbit-jcr-commons-2.19.6-SNAPSHOT.jar;"%REPO%"\vault-diff-3.4.1-SNAPSHOT.jar;"%REPO%"\diffutils-1.2.1.jar;"%REPO%"\commons-io-2.5.jar;"%REPO%"\vault-sync-3.4.1-SNAPSHOT.jar;"%REPO%"\commons-jci-fam-1.0.jar;"%REPO%"\commons-logging-api-1.1.jar;"%REPO%"\org.apache.sling.jcr.api-2.0.6.jar;"%REPO%"\org.apache.sling.commons.osgi-2.0.6.jar;"%REPO%"\vault-davex-3.4.1-SNAPSHOT.jar;"%REPO%"\jackrabbit-jcr-client-2.19.6-SNAPSHOT.jar;"%REPO%"\jackrabbit-spi-2.19.6-SNAPSHOT.jar;"%REPO%"\jackrabbit-spi-commons-2.19.6-SNAPSHOT.jar;"%REPO%"\commons-collections-3.2.2.jar;"%REPO%"\jackrabbit-jcr2spi-2.19.6-SNAPSHOT.jar;"%REPO%"\oak-jackrabbit-api-1.18.0.jar;"%REPO%"\jackrabbit-spi2dav-2.19.6-SNAPSHOT.jar;"%REPO%"\httpmime-4.5.3.jar;"%REPO%"\jackrabbit-webdav-2.19.6-SNAPSHOT.jar;"%REPO%"\httpcore-4.4.12.jar;"%REPO%"\httpclient-4.5.3.jar;"%REPO%"\commons-logging-1.0.3.jar;"%REPO%"\commons-codec-1.10.jar;"%REPO%"\jcl-over-slf4j-1.7.26.jar;"%REPO%"\commons-cli-2.0-mahout.jar;"%REPO%"\jline-0.9.94.jar;"%REPO%"\jcr-2.0.jar;"%REPO%"\slf4j-api-1.7.6.jar;"%REPO%"\slf4j-log4j12-1.7.6.jar;"%REPO%"\log4j-1.2.12.jar;"%REPO%"\vault-cli-3.4.1-SNAPSHOT.jar
 goto endInit
 
 @REM Reaching here means variables are defined and arguments have been captured
 :endInit
 
-%JAVACMD% %VLT_OPTS% %EXTRA_JVM_ARGUMENTS% -classpath %CLASSPATH_PREFIX%;%CLASSPATH% -Dapp.name="vlt" -Dapp.repo="%REPO%" -Dapp.home="%VLT_HOME%" -Dvlt.home="%VLT_HOME%" org.apache.jackrabbit.vault.cli.VaultFsApp %CMD_LINE_ARGS%
+%JAVACMD% %VLT_OPTS% -Xms500m -Xmx500m -classpath %CLASSPATH_PREFIX%;%CLASSPATH% -Dapp.name="vlt" -Dapp.repo="%REPO%" -Dapp.home="%VLT_HOME%" -Dvlt.home="%VLT_HOME%" org.apache.jackrabbit.vault.cli.VaultFsApp %CMD_LINE_ARGS%
 if ERRORLEVEL 1 goto error
 goto end
 
